@@ -1,3 +1,4 @@
+    2022/10/08: moved quest item lists out of code and into database for server customizations
     2022/10/05: quest ui checks
     2022/10/04: checks for valid math.random(), less frequent cottage tree and bush growth (abms), ui adjustments 
     2022/10/02: Quests can now require higher counts of items to complete, more cottage fixing
